# rhiza-brainbug

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  repos.yml
.github/workflows/: brainbug.yml  on-dispatch.yml  pages.yml  poll.yml
config/: ruff.toml
scripts/: branchfilter.py  build_dashboard.py  poll.py
state/: .gitkeep  Jebel-Quant__basanos  Jebel-Quant__basanos.json  Jebel-Quant__fast_minimum_variance  Jebel-Quant__fast_minimum_variance.json  Jebel-Quant__futures  Jebel-Quant__greeks  Jebel-Quant__greeks.json  Jebel-Quant__jquantstats  Jebel-Quant__jquantstats.json  Jebel-Quant__linalg  Jebel-Quant__linalg.json  Jebel-Quant__rhiza  Jebel-Quant__rhiza-cli  Jebel-Quant__rhiza-cli.json  Jebel-Quant__rhiza-hooks  Jebel-Quant__rhiza-hooks.json  Jebel-Quant__rhiza-tools  Jebel-Quant__rhiza-tools.json  Jebel-Quant__rhiza.json  Jebel-Quant__shrinkage  Jebel-Quant__shrinkage.json  Jebel-Quant__trends  cvxgrp__cvxball  cvxgrp__cvxcla  cvxgrp__cvxcla.json  cvxgrp__cvxmarkowitz  cvxgrp__cvxmarkowitz.json  cvxgrp__cvxrisk  cvxgrp__cvxrisk.json  cvxgrp__simulator  cvxgrp__simulator.json  tschm__TinyCTA  tschm__TinyCTA.json  tschm__cs  tschm__cs.json  tschm__jsharpe  tschm__jsharpe.json  tschm__loman  tschm__loman.json  (+2 more)
tests/: conftest.py  test_deps.py  test_docs.py  test_license.py  test_lint.py  test_pyproject.py  test_security.py  test_smoke.py  test_static.py  test_todos.py
