[project]
name = "rhiza-brainbug"
version = "0.1.0"
description = "Cross-repo test harness: react to commits in monitored repos and run brainbug tests against them."
requires-python = ">=3.11"
dependencies = [
    "pytest>=8",
    "pyyaml>=6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []
